neue css-file neu <p>

--- a/basic-repo/index.html
+++ b/basic-repo/index.html
@@ -8,6 +8,7 @@
 <h1>  Hallo, Developers!</h1>
 
 <p>Hallo Hallo </p>
+<p>Konflikt</p>
   <script src="assets/js/main.js"></script>
 </body>
 </html>
